crates/math-core/tests/snapshots/error_test__ampersand_as_sup_in_matrix.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}a^& b\\end{matrix}"
---
Error: Found "&", which may only appear at the top level of a table-like environment.
   ╭─[ <input>:1:17 ]
   │
 1 │ \begin{matrix}a^& b\end{matrix}
   │                 ┬  
   │                 ╰── cannot be used here
───╯
