crates/math-core/tests/snapshots/error_test__ampersand_in_group_in_matrix.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}\\color{red} a {&} b\\end{matrix}"
---
Error: Found "&", which may only appear at the top level of a table-like environment.
   ╭─[ <input>:1:30 ]
   │
 1 │ \begin{matrix}\color{red} a {&} b\end{matrix}
   │                              ┬  
   │                              ╰── cannot be used here
───╯
