crates/math-core/tests/snapshots/error_test__ampersand_in_left_right_in_matrix.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}\\left( a & b \\right)\\end{matrix}"
---
Error: Found "&", which may only appear at the top level of a table-like environment.
   ╭─[ <input>:1:24 ]
   │
 1 │ \begin{matrix}\left( a & b \right)\end{matrix}
   │                        ┬  
   │                        ╰── cannot be used here
───╯
