crates/math-core/tests/snapshots/error_test__ampersand_in_sqrt_degree_in_matrix.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{matrix}\\sqrt[a & b]{c}\\end{matrix}"
---
Error: Found "&", which may only appear at the top level of a table-like environment.
   ╭─[ <input>:1:23 ]
   │
 1 │ \begin{matrix}\sqrt[a & b]{c}\end{matrix}
   │                       ┬  
   │                       ╰── cannot be used here
───╯
