crates/math-core/tests/snapshots/error_test__array_in_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\begin{array}{|c|}a\\end{array}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\begin{array}{|c|}a\end{array}
   │      ──────┬──────  
   │            ╰──────── used as argument
───╯
