crates/math-core/tests/snapshots/error_test__array_in_subscript.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x_\\begin{array}{|c|}a\\end{array}}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:4 ]
   │
 1 │ {x_\begin{array}{|c|}a\end{array}}
   │    ──────┬──────  
   │          ╰──────── used as argument
───╯
