crates/math-core/tests/snapshots/error_test__color_switch_in_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\color{blue} x"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\color{blue} x
   │      ───┬──  
   │         ╰──── used as argument
───╯
