crates/math-core/tests/snapshots/error_test__def_as_argument.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt\\def\\zzz{1}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:6 ]
   │
 1 │ \sqrt\def\zzz{1}
   │      ──┬─  
   │        ╰─── used as argument
───╯
