crates/math-core/tests/snapshots/error_test__def_at_end.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def"
---
Error: Expected the name of a command.
   ╭─[ <input>:1:5 ]
   │
 1 │ \def
   │     │ 
   │     ╰─ expected a command name here
───╯
