crates/math-core/tests/snapshots/error_test__def_braced_name.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\def{\\zzz}{y}"
---
Error: Expected the name of a command.
   ╭─[ <input>:1:5 ]
   │
 1 │ \def{\zzz}{y}
   │     ┬  
   │     ╰── expected a command name here
───╯
